--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=limit-service
 spring.config.import=optional:configserver:http://localhost:8888
 
 
-
+#Limit - service props
+limit-service.minimum=1
+limit-service.maximum=99
