--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=limit-service
 
 spring.config.import=optional:configserver:http://localhost:8888
 
+spring.profiles.active=dev
+spring.cloud.config.profile=dev
 
 #Limit - service props
 limit-service.minimum=1
